Add premium landing page with SEO meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MathBudy - 数学学習支援</title>
+    <meta name="description" content="MathStudioは、書字困難(ディスグラフィア)のある中学生のためのインタラクティブ数学学習アプリ。手書き・入力・グラフ可視化で「わかった！」を増やす。" />
+    <meta property="og:title" content="MathStudio - 書けなくても、数学はできる。" />
+    <meta property="og:description" content="書字が苦手な中学生のためのインタラクティブ数学学習アプリ。比例・反比例・図形を楽しく学べる。" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <title>MathStudio - 書けなくても、数学はできる。</title>
   </head>
   <body>
     <div id="root"></div>
